resumes and about me

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 // COLORS
-$primary-color: #ffb007;
-$secondary-color: #a10000;
+// $primary-color: #ffb007;
+// $secondary-color: #a10000;
+
+$primary-color: #1e9600;
+$secondary-color: #1D2671;
 
 $white-color: #fff;
 
