--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 // $secondary-color: #a10000;
 
 $primary-color: #1e9600;
-$secondary-color: #1D2671;
+$secondary-color: #0019fa;
 
 $white-color: #fff;
 
